structmeta-tests/tests/compile_fail/struct_meta/not_parse.stderr
error[E0277]: the trait bound `NotParse: Parse` is not satisfied
 --> $DIR/not_parse.rs:3:5
  |
3 |     not_parse: NotParse,
  |     ^^^^^^^^^ the trait `Parse` is not implemented for `NotParse`
